# jssss

./: .cursorignore  .gitignore  DEPLOY.md  README.md  matching.txt
backend/: OUTLOOK_SETUP.md  OUTLOOK_TUNNEL.md  package.json
backend/schema/: migrate_rank_levels_to_four_tiers.sql
backend/schema/migrations/: add_job_applications_cv_path.sql  add_jobs_highlights.sql  schema_db_strucutre.sql
backend/scripts/: add-name-en-jp-migration.js  add-photo-path-migration.js  job-categories-ban-hang-dich-vu.json  job-categories-chuyen-gia-tu-van.json  job-categories-hanh-chinh-tro-ly.json  job-categories-it-se.json  job-categories-ke-hoach-quan-ly.json  job-categories-ky-thuat-co-khi-dien.json  job-categories-ky-thuat-hoa-hoc.json  job-categories-ky-thuat-nhung.json  job-categories-ky-thuat-thuc-pham.json  job-categories-ky-thuat-xay-dung.json  job-categories-sales.json  job-categories-sang-tao.json  job-categories-y-te-dieu-duong.json  seed-job-categories-sales.js
backend/src/: index.js
backend/src/config/: database.js  index.js
backend/src/constants/: cvStatus.js  jobApplicationStatus.js
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: landing.html
frontend/src/: App.css  App.jsx  index.css
python/: .gitignore  README.md  config.yaml  exist_db_check.py  main.py  pyproject.toml  test_cv.txt  translate_.py  x.py
python/models/: candidate_schema.py  cv_schema.py  jd_schema.py  matching_schema.py  schema.py  work_history_schema.py
python/routers/: compare.py  jd.py  resume3.py
python/utils/: prompt.py  tracker.py  utils.py
(+185 files in other folders)
